Bimba Dev/src/objects/Milestone__c.object
<CustomObject>
    <description>TOOLKIT - An object that represents a significant event in the project&apos;s lifespan.</description>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Asset_Initiative_Milestone__c</fullName>
        <description>Milestone for an Asset or a Initiative.</description>
        <inlineHelpText>Milestone for an Asset or a Initiative.</inlineHelpText>
        <label>Asset/Initiative Milestone</label>
        <picklist>
            <picklistValues>
                <fullName>Gain Stakeholder Buy-in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gather Requirements/ Define Scope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design/Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build/Develop Final Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test/Validate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deploy/Publish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optimize/Maintain</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Use this comment box to indicate the variance between milestone dates. (e.g. Holidays)</inlineHelpText>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Milestone_Id__c</fullName>
        <description>Milestone Id to distinguish a milestone for an Asset/Initiative.</description>
        <displayFormat>{000}</displayFormat>
        <inlineHelpText>Milestone Id to distinguish a milestone for an Asset/Initiative.</inlineHelpText>
        <label>Milestone Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Milestone_Name__c</fullName>
        <description>Milestone Name</description>
        <inlineHelpText>Name/Label for this milestone.</inlineHelpText>
        <label>Milestone Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestones__c</fullName>
        <label>Milestone</label>
        <picklist>
            <picklistValues>
                <fullName>Preliminary Release Scope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirements Definition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level of Effort Estimates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preliminary Scope Lock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Scope Lock (Design Sign-off)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development &amp; Unit Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deploy &amp; Train</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optimize/Maintain</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>On_Target__c</fullName>
        <description>Displays a status as red, green or yellow ball.</description>
        <formula>if(
( Start_Date__c  &lt;= TODAY()) &amp;&amp; (ISPICKVAL(Progress__c, &quot;Not Started&quot;)), IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;Red&quot;), if((Planned_End_Date__c &lt;= TODAY()) &amp;&amp; (ISPICKVAL(Progress__c, &quot;In Progress&quot;)), IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;Red&quot;), if((Planned_End_Date__c &lt;= TODAY()) &amp;&amp; (ISPICKVAL(Progress__c, &quot;Not Started&quot;)), IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;Red&quot;), 
if((Planned_End_Date__c &lt;= TODAY()+5) &amp;&amp; (ISPICKVAL(Progress__c, &quot;In Progress&quot;)), IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;Yellow&quot;), 
IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;Green&quot;)))))</formula>
        <label>On Target</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner of this Milestone</description>
        <inlineHelpText>Owner of this Milestone</inlineHelpText>
        <label>Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <label>% Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Planned_End_Date__c</fullName>
        <label>Planned End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <label>Progress</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Release related to this milestone.</description>
        <inlineHelpText>Release related to this milestone.</inlineHelpText>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Green: Milestone completion on target
Yellow: Milestone completion at risk
Red: Milestone completion planned to be missed or missed</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Milestone</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Milestone_Name__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Percent_Complete__c</columns>
        <columns>Progress__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Status__c</columns>
        <columns>On_Target__c</columns>
        <columns>Release__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Milestone ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <recordTypes>
        <fullName>Milestone_Asset_Initiative</fullName>
        <active>false</active>
        <description>Milestones for Assets/Initiatives</description>
        <label>Milestone for Asset/Initiative</label>
    </recordTypes>
    <recordTypes>
        <fullName>Milestone_Release</fullName>
        <active>true</active>
        <description>Milestones specific to Releases.</description>
        <label>Milestone for Release</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Progress_Required</fullName>
        <active>true</active>
        <description>Progress on a milestone is mandatory</description>
        <errorConditionFormula>ISPICKVAL( Progress__c,&apos;&apos;)</errorConditionFormula>
        <errorMessage>Please select an appropriate status for this milestone.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Release_Actual_End_Date</fullName>
        <active>true</active>
        <description>Release end date should not be greater than today&apos;s date</description>
        <errorConditionFormula>Actual_End_Date__c &gt; Today()</errorConditionFormula>
        <errorDisplayField>Actual_End_Date__c</errorDisplayField>
        <errorMessage>Actual End Date can&apos;t be greater than today&apos;s date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SetMilestone</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL( Asset_Initiative_Milestone__c , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Asset_Initiative_Milestone__c</errorDisplayField>
        <errorMessage>Select an appropriate Milestone.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>planned_end_date</fullName>
        <active>true</active>
        <description>planned end date should be greater than start date</description>
        <errorConditionFormula>OR(Planned_End_Date__c  &lt;  Start_Date__c , Actual_End_Date__c  &lt;  Start_Date__c )</errorConditionFormula>
        <errorMessage>Planned/Actual End Date must be greater than the Start Date.</errorMessage>
    </validationRules>
</CustomObject>